--- a/index.html
+++ b/index.html
@@ -1,140 +1,188 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="utf-8">
-        <title>HTML Academy: Седона</title>
-        <link rel="stylesheet" href="styles/styles.css">
-    </head>
-<body>
-<header class="page-header">
-<img class="logo" src="images/logo.svg" width="139" height="70"alt="Логотип города СЕДОНА">
-<nav class="navigation">
-<ul class="navigation-list">
-    <li class="navigation-item">
-        <a class="navigation-link" href="main.html">Главная</a>
-    </li>
-    <li class="navigation-item">
-        <a class="navigation-link" href="about.html">О Седоне</a>
-    </li>
-    <li class="navigation-item">
-        <a class="navigation-link" href="hotels.html">Гостиницы</a>
-    </li>
-</ul>
-</nav>
-<nav class="navigation">
-    <ul class="navigation-user">
-        <li class="navigation-item">
+  <head>
+    <meta charset="utf-8" />
+    <title>HTML Academy:Седона</title>
+    <link rel="stylesheet" href="C:\Users\yrok0\OneDrive\Рабочий стол\projects\htmlcss\styles\styles.css">
+    <link rel="stylesheet" href="styles//reset.css">
+
+  </head>
+  <body>
+    <header class="page-header">
+      <nav class="main-navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="main.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="hotels.html">Гостиницы</a>
+          </li>
+        </ul>
+        <a class="navigation-logo" href="index.html">
+          <img class="page-header-logo"  src="C:\Users\yrok0\OneDrive\Рабочий стол\projects\htmlcss\images\sedona.svg" width="139" height="70" alt="Логотип Седона">
+         </a>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
             <a class="navigation-link" href="#">
-                <span class="visually-hidden">
-                Поиск
-                </span>
+              <span class="visually-hidden">Поиск</span>
+
             </a>
-        </li>
-        <li class="navigation-item">
-            <a class="button" href="#">
-                <span class="visually-hidden">
-                Избранное
-                </span>
+          </li>
+          <li class="navigation-item">
+            <a class="button navigation-link"  href="#">
+              <span class="visually-hidden">Избранное</span>
             </a>
-        </li>
-        <li class="navigation-item">
-            <a class="button" href="#">ХОЧУ СЮДА!</a> 
-        </li>
-    </ul>
-    </nav>
-</header>
-<main class="main-index">
-<h1 class="visually-hidden">Добро пожаловать в город Седона!</h1>
-<div> <img src="images/welcome.svg" width="458" height="352" alt="Добро_пожаловать!">
-    <img src="images/divider.svg" width="1200" height="57" alt="Декоративная_вставка">
-</div>
-    <h2 class="city-intro">Седона — небольшой городок в Аризоне,<br>
-        заслуживающий большего!</h2>
-        <p class="advantages-intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-<section class="advantages">
-    <h2 class="visually-hidden">Преимущества</h2>
-    <ul class="advantages-list">
-        <li class="advantages-item">
+          </li>
+          <li class="navigation-item">
+            <a class="button" href="#">Хочу сюда</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-container main-index">
+      <div class="page-container">
+      <h1 class="visually-hidden">Добро пожаловать в город "Седона"</h1>
+      <div>
+        <img class="logo" src="C:\Users\yrok0\OneDrive\Рабочий стол\projects\htmlcss\images\welcome.svg" width="458" height="352" alt="логотип города Седона " />
+      </div>
+      <div class="intro">
+      <p class="city-intro">
+        Седона — небольшой городок в Аризоне,заслуживающий большего!
+      </p>
+      <p class="advantages-intro">
+        Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
+      </p>
+      </div>
+      <section class="advantages">
+        <h2 class="visually-hidden">Приемущества</h2>
+        <ul class="advantages-list">
+        <div class="advantages-city">
+          <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
-            <p class="advantages-description"> <span>№1</span> Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-                <img src="images/photo-1.jpg" width="800" height="384" alt="Уютная_улочка_в_городе_Седона">
-                <ul>
-                    <li class="advantages-subitem">
-                        <h4 class="advantages-subitem-title">Жильё</h4>
-                             <p class="advantages-subitem-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-                    </li>
-                    <li class="advantages-subitem">
-                        <h4 class="advantages-subitem-title">Еда</h4>
-                             <p class="advantages-subitem-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь! </p>
-                    </li>
-                    <li class="advantages-subitem">
-                        <h4 class="advantages-subitem-title">Сувениры</h4>
-                             <p class="advantages-subitem-description">Не только китайского, но и настоящего местного производства! </p>
-                    </li>
-                </ul>
+            <span>— №1 —</span>
+            <p class="advantages-discription">
+              Седона - не аттракцион для туристов, там течёт
+              своя жизнь
+            </p>
+          </li>
+          <li class="advantages-item">
+              <img class="cyty-foto" src="images\cyty-foto.jpg" width="800" height="384" alt="фото города">
+          </li>
+        </div>
+        </ul>
+      </section>
+    <section class="info">
+      <h2 class="visually-hidden">Рекомендации туристам</h2>
+      <ul class="info-list">
+        <li class="info-item">
+          <h3 class="info-title">Жильё</h3>
+          <p class="info-discription">
+            Рекомендуем пожить в настоящем мотеле, всё как в кино!
+          </p>
         </li>
-        <li class="advantages-item">  
-        <h3 class="advantages-title">Там есть мост дьявола</h3>
-        <p class="advantages-description"> <span>№2</span> Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img src="images/photo-2.jpg" width="800" height="384" alt="Вид_на_мост_дьявола">
+        <li class="info-item">
+          <h3 class="info-title">Еда</h3>
+          <p class="info-discription">
+            Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+          </p>
         </li>
-        <li class="advantages-item">  
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description"> <span>№3</span> Все достопримечательности находятся очень близко</p>
+        <li class="info-item">
+          <h3 class="info-title">Сувениры</h3>
+          <p class="info-discription">
+            Не только китайского, но и настоящего местного производства!
+          </p>
         </li>
-        <li class="advantages-item">  
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description"> <span>№4</span> Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </li>
-        <li class="advantages-item">  
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description"> <span>№5</span> Большинство едет в Гранд Каньон и толпится там</p>
-        </li>
-    </ul>
-</section>
-<section class="hotel-search">   
-    <h2 class="hotel-search-title">Заинтересовались?</h2>
-    <p class="hotel-search-form">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button"href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
-</section>
-<section class="newsletter">  
-    <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-     <p class="newsletter-subscribtion">Только полезная информация и никакого спама,честное бойскаутское!</p>
-         <form class="subscribtion-form" action="https://echo.htmlacademy.ru/" method="post">  
-            <input class="field" type="email" name="newsletter-email" placeholder="Ваш e-mail">
-            <button class="button-newsletter-button" type="submit">Подписаться</button>
-         </form>
-</section>
-</main>
-<footer>
-    <section class="footer-social">
-     <h2 class="visually-hidden">Соцсети</h2>
-     <ul class="footer-social-list">
-        <li class="footer-social-item">
-            <a class="button" href="https://twitter.com/htmlacademy_ru">
-                <span class="visually-hidden">Твиттер</span>
-            </a>
-        </li>
-        <li class="footer-social-item">
-            <a class="button" href="https://www.facebook.com/htmlacademy">
-                <span class="visually-hidden">Фейсбук</span>
-            </a>
-        </li>
-        <li class="footer-social-item">
-            <a class="button" href="https://www.youtube.com/c/HTMLAcademyRUS">
-                <span class="visually-hidden">Ютуб</span>
-            </a>
-        </li>
-     </ul>
+      </ul>
     </section>
-    <section class="footer-contacts">
-    <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-   </section>
-   <section class="footer-logo">
-    <a href="https://htmlacademy.ru/">
-    <img class="logo" src="images/htmlacademy-logo.svg" width="114.9" height="32.9" alt="Логотип html.academy"></a>
-   </section>
-</footer>
-    </body>
+    <section class="advantages">
+      <h2 class="visually-hidden">Приемущества</h2>
+      <ul class="advantages-list">
+      <div class="advantages-canyon">
+        <li class="advantages-item">
+          <h3 class="advantages-title">Там есть Мост дьявола</h3>
+          <span>— №2 —</span>
+          <p class="advantages-discription">
+            Да, по нему можно пройти! Если конечно вы
+            осмелитесь
+          </p>
+        </li>
+        <li class="advantages-item">
+          <img class="canyon-foto" src="images\canyon-foto.jpg" width="800" height="384" alt="фото каньона">
+        </li>
+      </div>
+        <div class="advantages-columns">
+        <li class="advantages-item">
+          <h3 class="advantages-title">небольшая площадь</h3>
+          <span>— №3 —</span>
+          <p class="advantages-discription">
+           все достопримечательности находятся очень близко
+          </p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">красивая дорога</h3>
+          <span>— №4 —</span>
+          <p class="advantages-discription">
+            ехать в седону из лас-вегаса совсем не скучно!
+          </p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-title">мало туристов</h3>
+          <span>— №5 —</span>
+          <p class="advantages-discription">
+            большинство едет в гранд каньон и толпится там
+          </p>
+        </li>
+      </div>
+      </ul>
+      <section class="hotel-serch">
+        <h2 class="hotel-serch-title">Заинтересовались?</h2>
+        <p class="hotel-serch-form">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <a class="button" href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
+    </section>
+    <section class="newsletter">
+        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+         <p class="newsletter-subscribtion">Только полезная информация и никакого спама,честное бойскаутское!</p>
+             <form class="subscribtion-form" action="https://echo.htmlacademy.ru/" method="post">
+                <input class="field" type="email" name="newsletter-email" placeholder="Ваш e-mail">
+                <button class="button-newsletter-button" type="submit">Подписаться</button>
+             </form>
+    </section>
+      </div>
+  </main>
+  <footer class="page-footer">
+    <div class="footer-container">
+  <section class="footer-social">
+    <h2 class="visually-hidden">Соцсети</h2>
+    <ul class="social-list">
+      <li class="social-item">
+        <a class="button" href="#">
+          <span class="visually-hidden">Твиттер</span>
+        </a>
+      </li>
+      <li class="social-item">
+        <a class="button" href="#">
+          <span class="visually-hidden">Фэйсбук</span>
+        </a>
+      </li>
+      <li class="social-item">
+        <a class="button" href="#">
+          <span class="visually-hidden">Ютуб</span>
+        </a>
+      </li>
+    </ul>
+  </section>
+    <section class="contacts-phone">
+      <a class="contacts-number" href="#">+7 (812) 812-12-12</a>
+    </section>
+    <section class="html-academy-logo">
+      <a class="html-academy-logo" href="#">
+        <img class="footer-iogo" src="../htmlcss/images/logo_htmlacademy.png" width="115" height="34" alt="Логотип Академии">
+      </a>
+    </section>
+  </div>
+  </footer>
+  </body>
 </html>
-        
