--- a/catalog.html
+++ b/catalog.html
@@ -195,58 +195,58 @@
       </a>
     </div>
     </section>
-    <section class="hotel-card">
+    <section class="hotel-card-blok">
       <ul class="hotel-card-list">
         <li class="hotel-card-item">
           <div class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
               <img class="hotel-card-image" src="images\hotel-1[1].jpg" alt="hotel-foto" width="180" height="120">
-              <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
+            <h3 class="hotel-card-title">Amara Resort & Spa</h3>
               <span class="hotel-class">Гостиница</span>
               <span class="hotel-price-min">От 4000 ₽</span>
-              <a class="button" href="hotel.html">подробнее</a>
-              <button class="button">В избранное</button>
-              <button class="button">Рейтинг: 8,5</button>
+              <a class="button button-more" href="hotel.html">подробнее</a>
+              <button class="button button-favorite">В избранное</button>
+              <button class="button button-rating">Рейтинг: 8,5</button>
           </div>
         </li>
         <li class="hotel-card-item">
           <div class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
               <img class="hotel-card-image" src="images\hotel-2[1].jpg" alt="hotel-foto" width="180" height="120">
-              <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
+            <h3 class="hotel-card-title">Desert Quail Inn</h3>
               <span class="hotel-class">Мотель</span>
               <span class="hotel-price-min">От 3000 ₽</span>
-              <a class="button" href="hotel.html">подробнее</a>
-              <button class="button">В избранное</button>
-              <button class="button">Рейтинг: 8,9</button>
+              <a class="button button-more" href="hotel.html">подробнее</a>
+              <button class="button button-favorite">В избранное</button>
+              <button class="button button-rating">Рейтинг: 8,9</button>
           </div>
         </li>
         <li class="hotel-card-item">
           <div class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
               <img class="hotel-card-image" src="images\hotel-3[1].jpg" alt="hotel-foto" width="180" height="120">
-              <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
+            <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
               <span class="hotel-class">Апартаменты</span>
               <span class="hotel-price-min">От 2000 ₽</span>
-              <a class="button" href="hotel.html">подробнее</a>
-              <button class="button">В избранном</button>
-              <button class="button">Рейтинг: 9,2</button>
+              <a class="button button-more" href="hotel.html">подробнее</a>
+              <button class="button button-favorite">В избранном</button>
+              <button class="button button-rating">Рейтинг: 9,2</button>
           </div>
         </li>
         <li class="hotel-card-item">
           <div class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
               <img class="hotel-card-image" src="images\hotel-4[1].jpg" alt="hotel-foto" width="180" height="120">
-              <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
+            <h3 class="hotel-card-title">GreenTree Inn</h3>
               <span class="hotel-class">Гостиница</span>
               <span class="hotel-price-min">От 3000 ₽</span>
-              <a class="button" href="hotel.html">подробнее</a>
-              <button class="button">В избранное</button>
-              <button class="button">Рейтинг: 9,2</button>
+              <a class="button button-more" href="hotel.html">подробнее</a>
+              <button class="button button-favorite">В избранное</button>
+              <button class="button button-rating">Рейтинг: 9,2</button>
           </div>
         </li>
       </ul>
