--- a/catalog.html
+++ b/catalog.html
@@ -166,7 +166,7 @@
           />
         </fieldset>
         <div class="button-column">
-          <button class="button" type="submit">Применить</button>
+          <button class="button button-apply" type="submit">Применить</button>
           <button class="button" type="submit">Сбросить</button>
         </div>
       </div>
