--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main class="main-container main-index">
       <div class="page-container">
       <h1 class="visually-hidden">Добро пожаловать в город "Седона"</h1>
-      <div>
+      <div class="main-logo">
         <img class="logo" src="C:\Users\yrok0\OneDrive\Рабочий стол\projects\htmlcss\images\welcome.svg" width="458" height="352" alt="логотип города Седона " />
       </div>
       <div class="intro">
