--- a/catalog.html
+++ b/catalog.html
@@ -42,6 +42,7 @@
     <section>
     <main class="main-inner">
     <div class="page-container">
+      <div class="header-container">
       <header class="header-inner">
         <h1 class="header-inner-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
@@ -172,6 +173,7 @@
       </div>
       </form>
     </section>
+  </div>
     <section class="sorting-type-section">
       <div class="sorting-container">
         <p class="hotel-number">Найдено гостиниц: 38</p>
