--- a/catalog.html
+++ b/catalog.html
@@ -168,7 +168,7 @@
         </fieldset>
         <div class="button-column">
           <button class="button button-apply" type="submit">Применить</button>
-          <button class="button" type="submit">Сбросить</button>
+          <button class="button button-reset" type="submit">Сбросить</button>
         </div>
       </div>
       </form>
@@ -202,7 +202,7 @@
         <li class="hotel-card-item">
           <div class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
-              <img class="hotel-card-image" src="images\hotel-1[1].jpg" alt="hotel-foto" width="180" height="120">
+              <img class="hotel-card-image" src="../htmlcss/images/hotel-1[1].jpg" alt="hotel-foto" width="180" height="120">
             </a>
             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
               <span class="hotel-class">Гостиница</span>
@@ -215,7 +215,7 @@
         <li class="hotel-card-item">
           <div class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
-              <img class="hotel-card-image" src="images\hotel-2[1].jpg" alt="hotel-foto" width="180" height="120">
+              <img class="hotel-card-image" src="../htmlcss/images/hotel-2[1].jpg" alt="hotel-foto" width="180" height="120">
             </a>
             <h3 class="hotel-card-title">Desert Quail Inn</h3>
               <span class="hotel-class">Мотель</span>
@@ -228,7 +228,7 @@
         <li class="hotel-card-item">
           <div class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
-              <img class="hotel-card-image" src="images\hotel-3[1].jpg" alt="hotel-foto" width="180" height="120">
+              <img class="hotel-card-image" src="../htmlcss/images/hotel-3[1].jpg" alt="hotel-foto" width="180" height="120">
             </a>
             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
               <span class="hotel-class">Апартаменты</span>
@@ -241,7 +241,7 @@
         <li class="hotel-card-item">
           <div class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
-              <img class="hotel-card-image" src="images\hotel-4[1].jpg" alt="hotel-foto" width="180" height="120">
+              <img class="hotel-card-image" src="../htmlcss/images/hotel-4[1].jpg" alt="hotel-foto" width="180" height="120">
             </a>
             <h3 class="hotel-card-title">GreenTree Inn</h3>
               <span class="hotel-class">Гостиница</span>
@@ -284,8 +284,8 @@
       </ul>
       <div class="sorting-number">
         <form class="sorting-number">
-          <label for="sorting-number">Гостиниц на странице:</label>
-          <select class="select-control" id="sorting-number" name="sorting-number">
+          <label for="sorting-number-label">Гостиниц на странице:</label>
+          <select class="select-control-amount" id="sorting-number" name="sorting-number">
             <option value="four">4</option>
             <option value="six">6</option>
           </select>
