--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </li>
         </ul>
         <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo"  src="C:\Users\yrok0\OneDrive\Рабочий стол\projects\htmlcss\images\sedona.svg" width="139" height="70" alt="Логотип Седона">
+          <img class="page-header-logo"  src="images/sedona.svg" width="139" height="70" alt="Логотип Седона">
          </a>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
@@ -46,7 +46,7 @@
       <div class="page-container">
       <h1 class="visually-hidden">Добро пожаловать в город "Седона"</h1>
       <div class="main-logo">
-        <img class="logo" src="C:\Users\yrok0\OneDrive\Рабочий стол\projects\htmlcss\images\welcome.svg" width="458" height="352" alt="логотип города Седона " />
+        <img class="logo" src="images/welcome.svg" width="458" height="352" alt="логотип города Седона " />
       </div>
       <div class="intro">
       <p class="city-intro">
@@ -69,7 +69,7 @@
             </p>
           </li>
           <li class="advantages-item">
-              <img class="cyty-foto" src="images\cyty-foto.jpg" width="800" height="384" alt="фото города">
+              <img class="cyty-foto" src="../htmlcss/images/cyty-foto.jpg" width="800" height="384" alt="фото города">
           </li>
         </div>
         </ul>
@@ -110,7 +110,7 @@
           </p>
         </li>
         <li class="advantages-item">
-          <img class="canyon-foto" src="images\canyon-foto.jpg" width="800" height="384" alt="фото каньона">
+          <img class="canyon-foto" src="../htmlcss/images/canyon-foto.jpg" width="800" height="384" alt="фото каньона">
         </li>
       </div>
         <div class="advantages-columns">
@@ -140,7 +140,7 @@
       <section class="hotel-serch">
         <h2 class="hotel-serch-title">Заинтересовались?</h2>
         <p class="hotel-serch-form">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a class="button" href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
+            <a class="button button-serch" href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
     </section>
     <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
