--- a/catalog.html
+++ b/catalog.html
@@ -25,16 +25,31 @@
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
+              <svg class="navigation-icon" aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_3_16)">
+                <path d="M18 16.5L14.3 12.8C15.3 11.5 16 9.8 16 7.9C16 3.5 12.4 -0.1 8 -0.1C3.6 -0.1 0 3.6 0 8C0 12.4 3.6 16 8 16C9.8 16 11.5 15.4 12.9 14.3L16.6 18L18 16.5ZM8 14C4.7 14 2 11.3 2 8C2 4.7 4.7 2 8 2C11.3 2 14 4.7 14 8C14 11.3 11.3 14 8 14Z" fill="black"/>
+                </g>
+                <defs>
+                <clipPath id="clip0_3_16">
+                <rect width="18" height="18" fill="white"/>
+                </clipPath>
+                </defs>
+                </svg>
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="button navigation-link" href="#">
+            <a class="navigation-link" href="#">
+              <svg class="navigation-icon-favourite" aria-hidden="true" focusable="false" width="31" height="27" viewBox="0 0 31 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.9 27C8.6 27 8.3 26.9 8.1 26.6C2.7 20.5 1.4 19.1 1.1 18.7C0.4 17.8 0 16.6 0 15.4C0 12.4 2.4 10 5.5 10C6.8 10 8 10.5 9 11.3C10 10.5 11.3 10 12.5 10C15.5 10 18 12.4 18 15.4C18 16.7 17.5 17.9 16.7 18.8L9.7 26.7C9.5 26.9 9.3 27 8.9 27ZM2.9 17.5C3.2 17.9 6.4 21.5 9 24.4L15.2 17.4C15.7 16.9 15.9 16.2 15.9 15.4C15.9 13.6 14.4 12.1 12.6 12.1C11.6 12.1 10.6 12.6 9.9 13.4C9.6 13.7 9.3 13.8 9 13.8C8.7 13.8 8.4 13.6 8.2 13.4C7.5 12.6 6.5 12.1 5.5 12.1C3.7 12.1 2.2 13.6 2.2 15.4C2.1 16.3 2.5 17 2.9 17.5C2.8 17.5 2.8 17.5 2.9 17.5Z" fill="black"/>
+                <path d="M31 9.5C31 14.7467 26.7467 19 21.5 19C16.2533 19 12 14.7467 12 9.5C12 4.25329 16.2533 0 21.5 0C26.7467 0 31 4.25329 31 9.5Z" fill="#7DB54F"/>
+                <path d="M17.6308 12.26H19.0308V7.42L19.1308 6.83L18.7308 7.3L17.6308 8.09L17.2508 7.58L19.4508 5.88H19.8108V12.26H21.1808V13H17.6308V12.26ZM25.46 7.59C25.46 7.94333 25.3933 8.30667 25.26 8.68C25.1333 9.04667 24.9633 9.41667 24.75 9.79C24.5433 10.1633 24.31 10.53 24.05 10.89C23.79 11.2433 23.53 11.58 23.27 11.9L22.78 12.33V12.37L23.42 12.26H25.6V13H21.62V12.71C21.7667 12.5567 21.9433 12.3667 22.15 12.14C22.3567 11.9133 22.57 11.6633 22.79 11.39C23.0167 11.11 23.2367 10.8167 23.45 10.51C23.67 10.1967 23.8667 9.88 24.04 9.56C24.22 9.24 24.3633 8.92333 24.47 8.61C24.5767 8.29667 24.63 8 24.63 7.72C24.63 7.39333 24.5367 7.12333 24.35 6.91C24.1633 6.69 23.88 6.58 23.5 6.58C23.2467 6.58 23 6.63333 22.76 6.74C22.52 6.84 22.3133 6.95667 22.14 7.09L21.81 6.52C22.0433 6.32 22.32 6.16333 22.64 6.05C22.96 5.93667 23.3033 5.88 23.67 5.88C23.9567 5.88 24.21 5.92333 24.43 6.01C24.65 6.09 24.8367 6.20667 24.99 6.36C25.1433 6.51333 25.26 6.69667 25.34 6.91C25.42 7.11667 25.46 7.34333 25.46 7.59Z" fill="white"/>
+                </svg>
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="button" href="#">Хочу сюда</a>
+            <a class="button button-in" href="#">Хочу сюда</a>
           </li>
         </ul>
       </nav>
@@ -186,13 +201,35 @@
         </select>
         <button class="visually-hidden" type="submit">Отсортировать</button>
       </form>
-      <a href="#" class="button button">
+      <a href="#" class="card-grid-toggle">
+        <svg width="16" height="14" aria-hidden="true" focusable="false" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M4 0H0V6H4V0Z" fill="black"/>
+          <path d="M16 0H12V6H16V0Z" fill="black"/>
+          <path d="M10 0H6V6H10V0Z" fill="black"/>
+          <path d="M4 8H0V14H4V8Z" fill="black"/>
+          <path d="M16 8H12V14H16V8Z" fill="black"/>
+          <path d="M10 8H6V14H10V8Z" fill="black"/>
+          </svg>
         <span class="visually-hidden">Показать карточки</span>
       </a>
-      <a href="#" class="button button">
+      <a href="#" class="card-grid-toggle">
+        <svg width="16" height="14" aria-hidden="true" focusable="false" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M16 12H0V14H16V12Z" fill="black"/>
+          <path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black"/>
+          </svg>
         <span class="visually-hidden">Показать на весь экран</span>
       </a>
-      <a href="#" class="button button-light">
+      <a href="#" class="card-grid-toggle">
+        <svg width="16" height="14" aria-hidden="true" focusable="false" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M2 0H0V2H2V0Z" fill="black"/>
+          <path d="M16 0H4V2H16V0Z" fill="black"/>
+          <path d="M2 4H0V6H2V4Z" fill="black"/>
+          <path d="M16 4H4V6H16V4Z" fill="black"/>
+          <path d="M2 8H0V10H2V8Z" fill="black"/>
+          <path d="M16 8H4V10H16V8Z" fill="black"/>
+          <path d="M2 12H0V14H2V12Z" fill="black"/>
+          <path d="M16 12H4V14H16V12Z" fill="black"/>
+          </svg>
         <span class="visually-hidden">Показать список</span>
       </a>
     </div>
@@ -205,6 +242,20 @@
               <img class="hotel-card-image" src="../htmlcss/images/hotel-1[1].jpg" alt="hotel-foto" width="180" height="120">
             </a>
             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+            <div class="rating-hotel-img">
+              <svg class="hotel-star" width="18" height="17" aria-hidden="true" focusable="false" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+                </svg>
+                <svg class="hotel-star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+                  </svg>
+                  <svg class="hotel-star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+                    </svg>
+                    <svg class="hotel-star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+                      </svg>
+            </div>
               <span class="hotel-class">Гостиница</span>
               <span class="hotel-price-min">От 4000 ₽</span>
               <a class="button button-more" href="hotel.html">подробнее</a>
@@ -218,6 +269,17 @@
               <img class="hotel-card-image" src="../htmlcss/images/hotel-2[1].jpg" alt="hotel-foto" width="180" height="120">
             </a>
             <h3 class="hotel-card-title">Desert Quail Inn</h3>
+            <div class="rating-hotel-img">
+              <svg class="hotel-star" width="18" height="17" aria-hidden="true" focusable="false" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+                </svg>
+                <svg class="hotel-star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+                  </svg>
+                  <svg class="hotel-star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+                    </svg>
+            </div>
               <span class="hotel-class">Мотель</span>
               <span class="hotel-price-min">От 3000 ₽</span>
               <a class="button button-more" href="hotel.html">подробнее</a>
@@ -231,6 +293,14 @@
               <img class="hotel-card-image" src="../htmlcss/images/hotel-3[1].jpg" alt="hotel-foto" width="180" height="120">
             </a>
             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+            <div class="rating-hotel-img">
+              <svg class="hotel-star" width="18" height="17" aria-hidden="true" focusable="false" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+                </svg>
+                <svg class="hotel-star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+                  </svg>
+            </div>
               <span class="hotel-class">Апартаменты</span>
               <span class="hotel-price-min">От 2000 ₽</span>
               <a class="button button-more" href="hotel.html">подробнее</a>
@@ -244,6 +314,14 @@
               <img class="hotel-card-image" src="../htmlcss/images/hotel-4[1].jpg" alt="hotel-foto" width="180" height="120">
             </a>
             <h3 class="hotel-card-title">GreenTree Inn</h3>
+            <div class="rating-hotel-img">
+              <svg class="hotel-star" width="18" height="17" aria-hidden="true" focusable="false" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+                </svg>
+                <svg class="hotel-star" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M9 0L11.1 6.5H18L12.4 10.5L14.6 17L9 13L3.4 17L5.6 10.5L0 6.5H6.9L9 0Z" fill="#83B3D3"/>
+                  </svg>
+            </div>
               <span class="hotel-class">Гостиница</span>
               <span class="hotel-price-min">От 3000 ₽</span>
               <a class="button button-more" href="hotel.html">подробнее</a>
@@ -258,11 +336,6 @@
     </div>
     <section class="catalog-pagination">
       <ul class="pagination">
-        <li class="pagination-item">
-          <a class="pagination-link pagination-prev pagination-disabled">
-            <span class="visually-hidden">Предыдущая страница</span>
-          </a>
-        </li>
         <li class="pagination-item">
           <a class="pagination-link-pagination-current">1</a>
         </li>
@@ -322,17 +395,17 @@
       <h2 class="visually-hidden">Соцсети</h2>
       <ul class="social-list">
         <li class="social-item">
-          <a class="button" href="#">
+          <a class="social-link social-link-tw" href="#">
             <span class="visually-hidden">Твиттер</span>
           </a>
         </li>
         <li class="social-item">
-          <a class="button" href="#">
+          <a class="social-link social-link-fb" href="#">
             <span class="visually-hidden">Фэйсбук</span>
           </a>
         </li>
         <li class="social-item">
-          <a class="button" href="#">
+          <a class="social-link social-link-yt" href="#">
             <span class="visually-hidden">Ютуб</span>
           </a>
         </li>
