--- a/index.html
+++ b/index.html
@@ -27,17 +27,33 @@
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
+              <svg class="navigation-icon" aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_3_16)">
+                <path d="M18 16.5L14.3 12.8C15.3 11.5 16 9.8 16 7.9C16 3.5 12.4 -0.1 8 -0.1C3.6 -0.1 0 3.6 0 8C0 12.4 3.6 16 8 16C9.8 16 11.5 15.4 12.9 14.3L16.6 18L18 16.5ZM8 14C4.7 14 2 11.3 2 8C2 4.7 4.7 2 8 2C11.3 2 14 4.7 14 8C14 11.3 11.3 14 8 14Z" fill="black"/>
+                </g>
+                <defs>
+                <clipPath id="clip0_3_16">
+                <rect width="18" height="18" fill="white"/>
+                </clipPath>
+                </defs>
+                </svg>
+
               <span class="visually-hidden">Поиск</span>
 
             </a>
           </li>
           <li class="navigation-item">
-            <a class="button navigation-link"  href="#">
+            <a class="navigation-link"  href="#">
+              <svg class="navigation-icon-favourite" aria-hidden="true" focusable="false" width="31" height="27" viewBox="0 0 31 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.9 27C8.6 27 8.3 26.9 8.1 26.6C2.7 20.5 1.4 19.1 1.1 18.7C0.4 17.8 0 16.6 0 15.4C0 12.4 2.4 10 5.5 10C6.8 10 8 10.5 9 11.3C10 10.5 11.3 10 12.5 10C15.5 10 18 12.4 18 15.4C18 16.7 17.5 17.9 16.7 18.8L9.7 26.7C9.5 26.9 9.3 27 8.9 27ZM2.9 17.5C3.2 17.9 6.4 21.5 9 24.4L15.2 17.4C15.7 16.9 15.9 16.2 15.9 15.4C15.9 13.6 14.4 12.1 12.6 12.1C11.6 12.1 10.6 12.6 9.9 13.4C9.6 13.7 9.3 13.8 9 13.8C8.7 13.8 8.4 13.6 8.2 13.4C7.5 12.6 6.5 12.1 5.5 12.1C3.7 12.1 2.2 13.6 2.2 15.4C2.1 16.3 2.5 17 2.9 17.5C2.8 17.5 2.8 17.5 2.9 17.5Z" fill="black"/>
+                <path d="M31 9.5C31 14.7467 26.7467 19 21.5 19C16.2533 19 12 14.7467 12 9.5C12 4.25329 16.2533 0 21.5 0C26.7467 0 31 4.25329 31 9.5Z" fill="#7DB54F"/>
+                <path d="M17.6308 12.26H19.0308V7.42L19.1308 6.83L18.7308 7.3L17.6308 8.09L17.2508 7.58L19.4508 5.88H19.8108V12.26H21.1808V13H17.6308V12.26ZM25.46 7.59C25.46 7.94333 25.3933 8.30667 25.26 8.68C25.1333 9.04667 24.9633 9.41667 24.75 9.79C24.5433 10.1633 24.31 10.53 24.05 10.89C23.79 11.2433 23.53 11.58 23.27 11.9L22.78 12.33V12.37L23.42 12.26H25.6V13H21.62V12.71C21.7667 12.5567 21.9433 12.3667 22.15 12.14C22.3567 11.9133 22.57 11.6633 22.79 11.39C23.0167 11.11 23.2367 10.8167 23.45 10.51C23.67 10.1967 23.8667 9.88 24.04 9.56C24.22 9.24 24.3633 8.92333 24.47 8.61C24.5767 8.29667 24.63 8 24.63 7.72C24.63 7.39333 24.5367 7.12333 24.35 6.91C24.1633 6.69 23.88 6.58 23.5 6.58C23.2467 6.58 23 6.63333 22.76 6.74C22.52 6.84 22.3133 6.95667 22.14 7.09L21.81 6.52C22.0433 6.32 22.32 6.16333 22.64 6.05C22.96 5.93667 23.3033 5.88 23.67 5.88C23.9567 5.88 24.21 5.92333 24.43 6.01C24.65 6.09 24.8367 6.20667 24.99 6.36C25.1433 6.51333 25.26 6.69667 25.34 6.91C25.42 7.11667 25.46 7.34333 25.46 7.59Z" fill="white"/>
+                </svg>
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="button" href="#">Хочу сюда</a>
+            <a class="button button-in" href="#">Хочу сюда</a>
           </li>
         </ul>
       </nav>
@@ -78,18 +94,49 @@
       <h2 class="visually-hidden">Рекомендации туристам</h2>
       <ul class="info-list">
         <li class="info-item">
+          <svg class="discription-logo" width="75" height="72" aria-hidden="true" focusable="false" viewBox="0 0 75 72" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M29.7 65H45.7V41.2H29.7C29.7 41.2 29.7 65 29.7 65ZM32.6 44.0999H42.7V62.0999H32.6V44.0999Z" fill="#81B3D2"/>
+            <path d="M72.8 39.3L74.9 37.2L65 27.3V0H51.1V13.6L37.5 0L0.199997 37.2L2.3 39.3L10.1 31.5V69.1H6.1V72H70V69.1H64.9V31.5L72.8 39.3ZM62 69.1H13V28.5L37.5 4.1L62 28.5V69.1ZM62 24.4L54.1 16.5V2.9H62V24.4Z" fill="#81B3D2"/>
+            <path d="M29.9 27.1C29.9 31.4 33.4 34.8 37.6 34.8C41.9 34.8 45.4 31.3 45.4 27.1C45.4 22.8 41.9 19.4 37.6 19.4C33.4 19.4 29.9 22.8 29.9 27.1ZM37.7 22.1C40.4 22.1 42.7 24.3 42.7 27C42.7 29.7 40.5 31.9 37.7 31.9C35 31.9 32.7 29.7 32.7 27C32.7 24.3 34.9 22.1 37.7 22.1Z" fill="#81B3D2"/>
+            <path d="M20.1 41.2H17.1V45.0999H20.1V41.2Z" fill="#81B3D2"/>
+            <path d="M26 41.2H23V45.0999H26V41.2Z" fill="#81B3D2"/>
+            <path d="M20.1 47.2H17.1V51.0999H20.1V47.2Z" fill="#81B3D2"/>
+            <path d="M26 47.2H23V51.0999H26V47.2Z" fill="#81B3D2"/>
+            <path d="M52 41.2H49V45.0999H52V41.2Z" fill="#81B3D2"/>
+            <path d="M57.9 41.2H54.9V45.0999H57.9V41.2Z" fill="#81B3D2"/>
+            <path d="M52 47.2H49V51.0999H52V47.2Z" fill="#81B3D2"/>
+            <path d="M57.9 47.2H54.9V51.0999H57.9V47.2Z" fill="#81B3D2"/>
+            </svg>
           <h3 class="info-title">Жильё</h3>
           <p class="info-discription">
             Рекомендуем пожить в настоящем мотеле, всё как в кино!
           </p>
         </li>
         <li class="info-item">
+          <svg class="discription-logo" width="74" height="70" aria-hidden="true" focusable="false" viewBox="0 0 74 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M69.9 46.7H59.3H14.6H4.1C1.8 46.7 0 48.6 0 51V54.5C0 56.9 1.9 58.7999 4.1 58.7999H5V59.9C5 65.4 9.3 70 14.6 70H59.2C64.5 70 68.8 65.5 68.8 59.9V58.7999H69.7C72 58.7999 73.8 56.9 73.8 54.5V51C74 48.7 72.1 46.7 69.9 46.7ZM66 59.9C66 63.8 63 66.9 59.3 66.9H14.6C10.9 66.9 7.9 63.7 7.9 59.9V58.7999H66V59.9ZM71.1 54.5C71.1 55.2 70.5 55.7999 69.9 55.7999H68.9H66H8H5H4C3.3 55.7999 2.8 55.2 2.8 54.5V51C2.8 50.3 3.4 49.7 4 49.7H7.7H14.6H59.2H66.1H69.8C70.5 49.7 71 50.3 71 51C71.1 51 71.1 54.5 71.1 54.5Z" fill="#81B3D2"/>
+            <path d="M15.6 38.4L21 42.5L26.3 38.4L31.6 42.5L36.9 38.4L42.3 42.5L47.6 38.4L52.9 42.5L58.3 38.4L63.6 42.5L69.8 37.8L68.1 35.3L63.6 38.7L58.3 34.6L52.9 38.7L47.6 34.6L42.3 38.7L36.9 34.6L31.6 38.7L26.3 34.6L21 38.7L15.6 34.6L10.3 38.7L5.79998 35.3L4.09998 37.8L10.3 42.5L15.6 38.4Z" fill="#81B3D2"/>
+            <path d="M8 31.5H65.9H68.8C68.8 30.9 68.9 30.3 68.9 29.6C68.9 29.2 68.9 28.8 68.9 28.4C68.2 12.7 54.2 0 37 0C19.7 0 5.7 12.7 5 28.5C5 28.9 5 29.3 5 29.7C5 30.3 5 31 5.1 31.6H8V31.5ZM37 3C52.6 3 65.4 14.3 66 28.5H8C8.6 14.4 21.4 3 37 3Z" fill="#81B3D2"/>
+            <path d="M37 17.3C38.0493 17.3 38.9 16.4046 38.9 15.3C38.9 14.1955 38.0493 13.3 37 13.3C35.9506 13.3 35.1 14.1955 35.1 15.3C35.1 16.4046 35.9506 17.3 37 17.3Z" fill="#81B3D2"/>
+            <path d="M29.2 12.2C30.2493 12.2 31.1 11.3045 31.1 10.2C31.1 9.09538 30.2493 8.19995 29.2 8.19995C28.1506 8.19995 27.3 9.09538 27.3 10.2C27.3 11.3045 28.1506 12.2 29.2 12.2Z" fill="#81B3D2"/>
+            <path d="M44.7 12.2C45.7493 12.2 46.6 11.3045 46.6 10.2C46.6 9.09538 45.7493 8.19995 44.7 8.19995C43.6506 8.19995 42.8 9.09538 42.8 10.2C42.8 11.3045 43.6506 12.2 44.7 12.2Z" fill="#81B3D2"/>
+            </svg>
           <h3 class="info-title">Еда</h3>
           <p class="info-discription">
             Всегда заказывайте фирменный бургер, вы не разочаруетесь!
           </p>
         </li>
         <li class="info-item">
+          <svg class="discription-logo" width="64" height="76" aria-hidden="true" focusable="false" viewBox="0 0 64 76" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_3_120)">
+            <path d="M61.1 22.5H61H36.3C50.1 15.6 51.2 11.2 50.7 8.79997C49.5 4.79997 45 1.79997 40.7 3.39997C35.1 5.49997 33.6 13.8 32.1 19.8C30.1 13.7 28.3 5.99997 23.9 2.09997C22.6 0.999966 20.8 -0.200034 18.1 0.0999663C14.1 0.499966 8.3 5.49997 10.6 11.1C12.9 16.5 20.3 19.9 25.2 22.6H3.2H2.9C1.3 22.6 0 23.9 0 25.5V36.8C0 38.4 1.3 39.7 2.9 39.7H3.2V73V75.4V76H61V75.5V73V39.6H61.1C62.7 39.6 64 38.3 64 36.7V25.4C64 23.8 62.7 22.5 61.1 22.5ZM42.4 5.89997C44.5 5.59997 47.4 7.19997 47.7 9.09997C48.1 11.9 44.3 14.4 42.6 15.5C40.1 17.2 37.7 18.1 35.3 19.6C36.2 15.9 37.8 6.59997 42.4 5.89997ZM19.5 15.9C17.3 14.4 13 11.5 13.1 8.09997C13.2 4.49997 18.8 1.49997 21.9 4.19997C25.8 7.59997 27.6 15.3 29 20.8C25.8 19.3 22.7 18 19.5 15.9ZM25.5 73H6.1V39.6H25.5V73ZM25.5 36.5H3V25.5H25.5V36.5ZM35.7 36.5V39.5V73H28.5V39.6V36.6V25.6H35.7V36.5ZM58 73H38.6V39.6H58V73ZM60.9 36.5H38.6V25.5H60.9V36.5Z" fill="#81B3D2"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_3_120">
+            <rect width="64" height="76" fill="white"/>
+            </clipPath>
+            </defs>
+            </svg>
           <h3 class="info-title">Сувениры</h3>
           <p class="info-discription">
             Не только китайского, но и настоящего местного производства!
@@ -158,17 +205,17 @@
     <h2 class="visually-hidden">Соцсети</h2>
     <ul class="social-list">
       <li class="social-item">
-        <a class="button" href="#">
+        <a class="social-link social-link-tw" href="#">
           <span class="visually-hidden">Твиттер</span>
         </a>
       </li>
       <li class="social-item">
-        <a class="button" href="#">
+        <a class="social-link social-link-fb" href="#">
           <span class="visually-hidden">Фэйсбук</span>
         </a>
       </li>
       <li class="social-item">
-        <a class="button" href="#">
+        <a class="social-link social-link-yt" href="#">
           <span class="visually-hidden">Ютуб</span>
         </a>
       </li>
