--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Гостиницы Седоны</title>
-    <link rel="stylesheet" href="C:\Users\yrok0\OneDrive\Рабочий стол\projects\htmlcss\styles\styles.css">
+    <link rel="stylesheet" href="../htmlcss/styles/styles.css">
   </head>
   <body>
     <header class="page-header">
@@ -262,7 +262,7 @@
         <li class="hotel-card-item">
           <div class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
-              <img class="hotel-card-image" src="../htmlcss/images/hotel-1[1].jpg" alt="hotel-foto" width="180" height="120">
+              <img class="hotel-card-image" src="images/hotel-1[1].jpg" alt="hotel-foto" width="180" height="120">
             </a>
             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             <div class="rating-hotel-img">
@@ -289,7 +289,7 @@
         <li class="hotel-card-item">
           <div class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
-              <img class="hotel-card-image" src="../htmlcss/images/hotel-2[1].jpg" alt="hotel-foto" width="180" height="120">
+              <img class="hotel-card-image" src="images/hotel-2[1].jpg" alt="hotel-foto" width="180" height="120">
             </a>
             <h3 class="hotel-card-title">Desert Quail Inn</h3>
             <div class="rating-hotel-img">
@@ -313,7 +313,7 @@
         <li class="hotel-card-item">
           <div class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
-              <img class="hotel-card-image" src="../htmlcss/images/hotel-3[1].jpg" alt="hotel-foto" width="180" height="120">
+              <img class="hotel-card-image" src="images/hotel-3[1].jpg" alt="hotel-foto" width="180" height="120">
             </a>
             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             <div class="rating-hotel-img">
@@ -334,7 +334,7 @@
         <li class="hotel-card-item">
           <div class="hotel-card">
             <a class="hotel-card-link" href="hotel.html">
-              <img class="hotel-card-image" src="../htmlcss/images/hotel-4[1].jpg" alt="hotel-foto" width="180" height="120">
+              <img class="hotel-card-image" src="images/hotel-4[1].jpg" alt="hotel-foto" width="180" height="120">
             </a>
             <h3 class="hotel-card-title">GreenTree Inn</h3>
             <div class="rating-hotel-img">
