--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>HTML Academy:Седона</title>
-    <link rel="stylesheet" href="C:\Users\yrok0\OneDrive\Рабочий стол\projects\htmlcss\styles\styles.css">
+    <link rel="stylesheet" href="../htmlcss/styles/styles.css">
     <link rel="stylesheet" href="styles//reset.css">
 
   </head>
@@ -53,9 +53,24 @@
             </a>
             <div class="popover popover-favourite popover-open">
               <div class="popover-content">
+                <svg class="popover-triangle" width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g filter="url(#filter0_d_5_544)">
+                  <path d="M10 1L20 10H0L10 1Z" fill="white"/>
+                  </g>
+                  <defs>
+                  <filter id="filter0_d_5_544" x="0" y="0" width="20" height="10" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                  <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                  <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                  <feOffset dy="-1"/>
+                  <feColorMatrix type="matrix" values="0 0 0 0 0.894118 0 0 0 0 0.894118 0 0 0 0 0.894118 0 0 0 1 0"/>
+                  <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_5_544"/>
+                  <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_5_544" result="shape"/>
+                  </filter>
+                  </defs>
+                  </svg>
               <ul class="popover-items-list">
                 <li class="popover-item">
-                  <img class="popover-hotel" src="../htmlcss/images/hotel-2-small.png" alt="small-hotel-foto" width="48"
+                  <img class="popover-hotel" src="" alt="images/small-hotel-foto" width="48"
                   height="48">
                   <p class="hotel-name">Desert Quail Inn</p>
                   <p class="hotel-type">Мотель</p>
@@ -70,7 +85,7 @@
                   </button>
                 </li>
                 <li class="popover-item">
-                  <img class="popover-hotel" src="../htmlcss/images/hotel-3-small.png" alt="small-hotel-foto" width="48"
+                  <img class="popover-hotel" src="images/hotel-2-small.png" alt="small-hotel-foto" width="48"
                   height="48">
                   <p class="hotel-name">Villas at Poco Diablo</p>
                   <p class="hotel-type">Апартаменты</p>
@@ -100,6 +115,9 @@
       <h1 class="visually-hidden">Добро пожаловать в город "Седона"</h1>
       <div class="main-logo">
         <img class="logo" src="images/welcome.svg" width="458" height="352" alt="логотип города Седона " />
+        <svg class="sedona-vector" width="1200" height="57" viewBox="0 0 1200 57" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 57V0L250 24V0L600 57L950 0V24L1200 0V57H0Z" fill="white"/>
+          </svg>
       </div>
       <div class="intro">
       <p class="city-intro">
@@ -122,7 +140,7 @@
             </p>
           </li>
           <li class="advantages-item">
-              <img class="cyty-foto" src="../htmlcss/images/cyty-foto.jpg" width="800" height="384" alt="фото города">
+              <img class="cyty-foto" src="images/cyty-foto.jpg" width="800" height="384" alt="фото города">
           </li>
         </div>
         </ul>
@@ -130,7 +148,7 @@
     <section class="info">
       <h2 class="visually-hidden">Рекомендации туристам</h2>
       <ul class="info-list">
-        <li class="info-item">
+        <li class="info-item info-rent">
           <svg class="discription-logo" width="75" height="72" aria-hidden="true" focusable="false" viewBox="0 0 75 72" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M29.7 65H45.7V41.2H29.7C29.7 41.2 29.7 65 29.7 65ZM32.6 44.0999H42.7V62.0999H32.6V44.0999Z" fill="#81B3D2"/>
             <path d="M72.8 39.3L74.9 37.2L65 27.3V0H51.1V13.6L37.5 0L0.199997 37.2L2.3 39.3L10.1 31.5V69.1H6.1V72H70V69.1H64.9V31.5L72.8 39.3ZM62 69.1H13V28.5L37.5 4.1L62 28.5V69.1ZM62 24.4L54.1 16.5V2.9H62V24.4Z" fill="#81B3D2"/>
@@ -149,7 +167,7 @@
             Рекомендуем пожить в настоящем мотеле, всё как в кино!
           </p>
         </li>
-        <li class="info-item">
+        <li class="info-item info-eat">
           <svg class="discription-logo" width="74" height="70" aria-hidden="true" focusable="false" viewBox="0 0 74 70" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M69.9 46.7H59.3H14.6H4.1C1.8 46.7 0 48.6 0 51V54.5C0 56.9 1.9 58.7999 4.1 58.7999H5V59.9C5 65.4 9.3 70 14.6 70H59.2C64.5 70 68.8 65.5 68.8 59.9V58.7999H69.7C72 58.7999 73.8 56.9 73.8 54.5V51C74 48.7 72.1 46.7 69.9 46.7ZM66 59.9C66 63.8 63 66.9 59.3 66.9H14.6C10.9 66.9 7.9 63.7 7.9 59.9V58.7999H66V59.9ZM71.1 54.5C71.1 55.2 70.5 55.7999 69.9 55.7999H68.9H66H8H5H4C3.3 55.7999 2.8 55.2 2.8 54.5V51C2.8 50.3 3.4 49.7 4 49.7H7.7H14.6H59.2H66.1H69.8C70.5 49.7 71 50.3 71 51C71.1 51 71.1 54.5 71.1 54.5Z" fill="#81B3D2"/>
             <path d="M15.6 38.4L21 42.5L26.3 38.4L31.6 42.5L36.9 38.4L42.3 42.5L47.6 38.4L52.9 42.5L58.3 38.4L63.6 42.5L69.8 37.8L68.1 35.3L63.6 38.7L58.3 34.6L52.9 38.7L47.6 34.6L42.3 38.7L36.9 34.6L31.6 38.7L26.3 34.6L21 38.7L15.6 34.6L10.3 38.7L5.79998 35.3L4.09998 37.8L10.3 42.5L15.6 38.4Z" fill="#81B3D2"/>
@@ -163,7 +181,7 @@
             Всегда заказывайте фирменный бургер, вы не разочаруетесь!
           </p>
         </li>
-        <li class="info-item">
+        <li class="info-item info-gift">
           <svg class="discription-logo" width="64" height="76" aria-hidden="true" focusable="false" viewBox="0 0 64 76" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_3_120)">
             <path d="M61.1 22.5H61H36.3C50.1 15.6 51.2 11.2 50.7 8.79997C49.5 4.79997 45 1.79997 40.7 3.39997C35.1 5.49997 33.6 13.8 32.1 19.8C30.1 13.7 28.3 5.99997 23.9 2.09997C22.6 0.999966 20.8 -0.200034 18.1 0.0999663C14.1 0.499966 8.3 5.49997 10.6 11.1C12.9 16.5 20.3 19.9 25.2 22.6H3.2H2.9C1.3 22.6 0 23.9 0 25.5V36.8C0 38.4 1.3 39.7 2.9 39.7H3.2V73V75.4V76H61V75.5V73V39.6H61.1C62.7 39.6 64 38.3 64 36.7V25.4C64 23.8 62.7 22.5 61.1 22.5ZM42.4 5.89997C44.5 5.59997 47.4 7.19997 47.7 9.09997C48.1 11.9 44.3 14.4 42.6 15.5C40.1 17.2 37.7 18.1 35.3 19.6C36.2 15.9 37.8 6.59997 42.4 5.89997ZM19.5 15.9C17.3 14.4 13 11.5 13.1 8.09997C13.2 4.49997 18.8 1.49997 21.9 4.19997C25.8 7.59997 27.6 15.3 29 20.8C25.8 19.3 22.7 18 19.5 15.9ZM25.5 73H6.1V39.6H25.5V73ZM25.5 36.5H3V25.5H25.5V36.5ZM35.7 36.5V39.5V73H28.5V39.6V36.6V25.6H35.7V36.5ZM58 73H38.6V39.6H58V73ZM60.9 36.5H38.6V25.5H60.9V36.5Z" fill="#81B3D2"/>
@@ -194,25 +212,25 @@
           </p>
         </li>
         <li class="advantages-item">
-          <img class="canyon-foto" src="../htmlcss/images/canyon-foto.jpg" width="800" height="384" alt="фото каньона">
+          <img class="canyon-foto" src="images/canyon-foto.jpg" width="800" height="384" alt="фото каньона">
         </li>
       </div>
         <div class="advantages-columns">
-        <li class="advantages-item">
+        <li class="advantages-item advantages-place">
           <h3 class="advantages-title">небольшая площадь</h3>
           <span>— №3 —</span>
           <p class="advantages-discription">
            все достопримечательности находятся очень близко
           </p>
         </li>
-        <li class="advantages-item">
+        <li class="advantages-item advantages-road">
           <h3 class="advantages-title">красивая дорога</h3>
           <span>— №4 —</span>
           <p class="advantages-discription">
             ехать в седону из лас-вегаса совсем не скучно!
           </p>
         </li>
-        <li class="advantages-item">
+        <li class="advantages-item advantages-tripper">
           <h3 class="advantages-title">мало туристов</h3>
           <span>— №5 —</span>
           <p class="advantages-discription">
@@ -323,6 +341,21 @@
       <label class="modal-label-kids" for="appointment-kids">Дети:</label>
       <button class="button button-info">
         <span class="visually-hidden">посмотреть дополнительную информацию</span>
+        <div class="modal-popup modal-popup-open">
+          <svg class="modal-triangle" width="19" height="9" viewBox="0 0 19 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_346_214)">
+            <path d="M9.5 0L19 9H0L9.5 0Z" fill="#333333"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_346_214">
+            <rect width="19" height="9" fill="white"/>
+            </clipPath>
+            </defs>
+            </svg>
+           <p class="modal-popup-content">
+            Укажите количество детей,которые будут с вами,возраст которых от 6 до 18 лет. Дети до 6 лет размещается бесплатно.
+           </p>
+        </div>
       </button>
       <input class="modal-humans modal-humans-kids" type="number" name="kids" id="appointment-kids" required placeholder="1">
     </form>
